Fix app height on mobile devices 2

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,5 +1,5 @@
 html, body {
     margin: 0;
     padding: 0;
-    height: calc(100vh - env(safe-area-inset-bottom));
+    height: 100svh;
 }
